--- a/templates/views/search.hbs
+++ b/templates/views/search.hbs
@@ -24,6 +24,10 @@
 </div>
 <div class="alert alert-info" role="alert" id="alertinfo"></div>
 </div>
+<div class="alert alert-info" role="alert" id="alertinfo1"></div>
+</div>
+<div class="alert alert-info" role="alert" id="alertinfo2"></div>
+</div>
 </div>
 
   <script src="../js/app.js"></script>
